More spacing fixes

--- a/media/scss/_base.scss
+++ b/media/scss/_base.scss
@@ -6,7 +6,7 @@ body {
 main,
 .main-app {
     padding-bottom: 1rem;
-    min-height: calc(100vh - 12rem);
+    min-height: calc(100vh - 20rem);
 }
 
 .content-body {
